Roll back POST /tracks
