# functions/swagger/tracks.yaml
@@ -59,12 +59,12 @@
                 type: string
               apple_id:
                 type: string
-              # youtube_id:
-              #   type: string
-              # start_time:
-              #   type: integer
-              # end_time:
-              #   type: integer
+              youtube_id:
+                type: string
+              start_time:
+                type: integer
+              end_time:
+                type: integer
     responses:
       '201':
         content:
